Update error page

--- a/views/dreams/edit.ejs
+++ b/views/dreams/edit.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include("../partials/header") %>
 
 <h1 id="center">Edit this dream</h1>
 <div class="line"></div>
@@ -26,4 +26,4 @@
   <input type="submit" class="btn btn-primary" value="Update">
 </form>
 
-<%- include('../partials/footer') %>
+<%- include("../partials/footer") %>
