--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,377 +1,438 @@
 :root {
-  --dark-purple: #08012E;
-  --pale-blue: #BFD7EA;
-  --blackish-purple: #0B0013;
-  --medium-purple: #210154;
-  --dim-gray: #69626D; 
-  --platinum-gray: #E7E7E7;
-  --bright-purple:  #7213c0;
-  --bright-blue:  #29669b;
+	--dark-purple: #08012E;
+	--pale-blue: #BFD7EA;
+	--blackish-purple: #0B0013;
+	--medium-purple: #210154;
+	--dim-gray: #69626D;
+	--platinum-gray: #E7E7E7;
+	--bright-purple: #7213c0;
+	--bright-blue: #29669b;
 }
 
 body {
-  padding: 50px 50px 0px 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  font-family: 'Armata', sans-serif;
-  background-color: #f5f5f5;
+	padding: 50px 50px 0px 50px;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font-family: 'Armata', sans-serif;
+	background-color: #f5f5f5;
 }
 
 a {
-  color: var(--bright-purple);
+	color: var(--bright-purple);
 }
-
 
 h5 {
-  font-size: 16px;
+	font-size: 16px;
 }
 
-footer { 
-  margin-top: 40px;
-  padding: 20px;
-  bottom: 0;
-  position: relative;
-  color: white;
-  background-color: var(--blackish-purple);
-  width: 100vw;
-  margin-left: -50px;
-  text-align: center;
+footer {
+	margin-top: 40px;
+	padding: 20px;
+	bottom: 0;
+	position: relative;
+	color: white;
+	background-color: var(--blackish-purple);
+	width: 100vw;
+	margin-left: -50px;
+	text-align: center;
 }
 
 time.icon {
-  display: block;
-  position: relative;
-  width: 7em;
-  height: 7em;
-  background-color: #fff;
-  margin: 0.5em auto;
-  border-radius: 0.6em;
-  box-shadow: 0 1px 0 #bdbdbd, 0 2px 0 #fff, 0 3px 0 #bdbdbd, 0 4px 0 #fff, 0 5px 0 #bdbdbd, 0 0 0 1px #bdbdbd;
-  overflow: hidden;
+	display: block;
+	position: relative;
+	width: 7em;
+	height: 7em;
+	background-color: #fff;
+	margin: 0.5em auto  1em auto;
+	border-radius: 0.6em;
+	box-shadow: 0 1px 0 #bdbdbd, 0 2px 0 #fff, 0 3px 0 #bdbdbd, 0 4px 0 #fff, 0 5px 0 #bdbdbd, 0 0 0 1px #bdbdbd;
+	overflow: hidden;
 }
 
 time.icon * {
-  display: block;
-  width: 100%;
-  font-size: 1em;
-  font-weight: bold;
-  font-style: normal;
-  text-align: center;
+	display: block;
+	width: 100%;
+	font-size: 1em;
+	font-weight: bold;
+	font-style: normal;
+	text-align: center;
 }
 
 .btn-primary {
-  background-color: var(--bright-blue);
+	background-color: var(--bright-blue);
 }
 
 .subheading {
-  padding: 40px 140px 40px -60px;
+	padding: 40px 140px 40px -60px;
 }
 
 .navbar {
-  font-family: 'Khand', sans-serif;
+	font-family: 'Khand', sans-serif;
 }
 
 .navbar-index {
-  font-family: 'Khand', sans-serif;
-  background-color:  rgb(8, 1, 46, 0.7);
+	font-family: 'Khand', sans-serif;
+	background-color: rgb(8, 1, 46, 0.7);
 }
 
 .navbar-index:hover {
-  font-family: 'Khand', sans-serif;
-  background-color: var(--platinum-gray);
+	font-family: 'Khand', sans-serif;
+	background-color: var(--platinum-gray);
 }
 
+.bold{
+	font-size: 20px
+}
 .landing-page {
-  text-align: center;
-  color: white;
+	text-align: center;
+	color: white;
 }
 
 .btn {
- border-radius: 12px;
- color: #fff;
- border-width: 2px;
- margin: 10px;
+	border-radius: 12px;
+	color: #fff;
+	border-width: 2px;
+	margin: 10px;
 }
 
 .btn-subheading {
-  margin: 20px;
+	margin: 20px;
 }
 
 #btn-login {
-  color: #fff;
-  border-width: 2px;
-  background-color:  none;
-  border-color:  #fff;
+	color: #fff;
+	border-width: 2px;
+	background-color: none;
+	border-color: #fff;
 }
 
 #btn-login:hover {
-  color: var(--dark-purple);
-  border-width: 2px;
-  background-color:  white;
-  border-color: var(--dark-purple);
+	color: var(--dark-purple);
+	border-width: 2px;
+	background-color: white;
+	border-color: var(--dark-purple);
 }
 
 .parallax {
-  background-position: 0 0;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  width: 100vw;
-  background-size: cover;
-  background-attachment: fixed;
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	width: 100vw;
+	background-size: cover;
+	background-attachment: fixed;
 }
 
 .title-left {
-  font-size: 2rem;
-  position: relative;
+	font-size: 2rem;
+	position: relative;
 }
 
 .lead {
-  margin-right: 20px;
+	margin-right: 20px;
 }
 
 .dream-box {
-  margin-bottom: 3rem;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  background-color: #fff;
-  text-align: center;
-  border-radius: 10px;
-  margin-right: 20px;
-
+	margin-bottom: 3rem;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	background-color: #fff;
+	text-align: center;
+	border-radius: 10px;
+	margin-right: 20px;
 }
 
 .dream-box:hover img {
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
+	-webkit-transform: scale(1.2);
+	transform: scale(1.2);
 }
 
 #center {
-  text-align: center;
+	text-align: center;
 }
 
 .dream-details {
-  padding: 0px 20px 20px 20px;
+	padding: 0px 20px 20px 20px;
 }
 
 .dream-more-details {
-  color: #4e4e4e;
-  font-size: 16px;
+	color: #4e4e4e;
+	font-size: 16px;
 }
-
 
 #all-dream-boxes {
-  margin: 0px;
+	margin: 0px;
 }
 
-
 .line {
-  width: 80px;
-  height: 5px;
-  background-color: var(--pale-blue);
-  margin: 0 auto;
-  margin-bottom: 20px;
+	width: 80px;
+	height: 5px;
+	background-color: var(--pale-blue);
+	margin: 0 auto;
+	margin-bottom: 20px;
 }
 
 .col-sm-8 {
-  width: 100%;
-  text-align: center;
+	width: 100%;
+	text-align: center;
 }
 
 .key-words {
-  font-size: 14px;
+	font-size: 14px;
 }
 
 .cast-list {
-  margin: 3rem 6.3rem 1.2rem 0;
+	margin: 3rem 6.3rem 1.2rem 0;
 }
 
 .progress {
-  background-color: #cde1f8;
-  margin: .5rem 6.3rem 1.2rem 0;
+	background-color: #cde1f8;
+	margin: .5rem 6.3rem 1.2rem 0;
 }
 
 .return-btn {
-text-align: center;
+	text-align: center;
 }
 
 .full-description {
-  margin-right: 50px;
+	margin-right: 50px;
 }
 
 .edit {
- padding: 0.5rem;
- display: inline-block;
- border: none;
- margin-right: 0px;
- color: black;
- border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
- border-style: solid;
- border-width: 1px;
- padding: 1px 7px 2px;
+	padding: 0.5rem;
+	display: inline-block;
+	border: none;
+	margin-right: 0px;
+	color: black;
+	border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
+	border-style: solid;
+	border-width: 1px;
+	padding: 1px 7px 2px;
 }
 
 .delete {
-  padding: 0.5rem;
-  display: inline-block;
-  border: none;
-  margin-right: 0px;
-  color: black;
+	padding: 0.5rem;
+	display: inline-block;
+	border: none;
+	margin-right: 0px;
+	color: black;
 }
 
-.edit:hover, .delete:hover {
-  text-decoration: none;
-  color:var(--bright-purple);
-  border-color: #7213c0
+.edit:hover,
+.delete:hover {
+	text-decoration: none;
+	color: var(--bright-purple);
+	border-color: #7213c0
 }
+
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+  visibility: visible;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+[data-tooltip] {
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+}
+
+[data-tooltip]:before,
+[data-tooltip]:after {
+  visibility: hidden;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  pointer-events: none;
+}
+
+[data-tooltip]:before {
+  position: absolute;
+  bottom: 150%;
+  left: 50%;
+  margin-bottom: 5px;
+  margin-left: -80px;
+  padding: 7px;
+  width: 160px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #000;
+  background-color: hsla(0, 0%, 20%, 0.9);
+  color: #fff;
+  content: attr(data-tooltip);
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+[data-tooltip]:after {
+  position: absolute;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -5px;
+  width: 0;
+  border-top: 5px solid #000;
+  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  content: " ";
+  font-size: 0;
+  line-height: 0;
+}
+
 
 #day {
-  position: absolute;
-  top: 0;
-  padding: 0.4em 0;
-  color: #fff;
-  background-color: var(--bright-purple);
+	position: absolute;
+	top: 0;
+	padding: 0.4em 0;
+	color: #fff;
+	background-color: var(--bright-purple);
 }
 
 #year {
-  position: absolute;
-  bottom: 0.3em;
-  color: var(--bright-purple);
+	position: absolute;
+	bottom: 0.3em;
+	color: var(--bright-purple);
 }
 
 #month {
-  width: 100%;
-  font-size: 2.8em;
-  letter-spacing: -0.05em;
-  padding-top: 0.8em;
+	width: 100%;
+	font-size: 2.8em;
+	letter-spacing: -0.05em;
+	padding-top: 0.8em;
 }
 
-#x-btn{
-  color: var(--dim-gray);
-  background-color:var(--platinum-gray);
-  border-color: var(--platinum-gray);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 4px;
+#x-btn {
+	color: var(--dim-gray);
+	background-color: var(--platinum-gray);
+	border-color: var(--platinum-gray);
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 4px;
 }
 
 #delete-edit {
-   text-align: right;
+	text-align: right;
 }
 
 #delete-form {
-  text-align: right;
-  padding: 8px 8px 0px 0px;
+	text-align: right;
+	padding: 8px 8px 0px 0px;
 }
 
-
 #first-dream {
-  margin-right: 50vw;
-  border-radius: 12px;
-  color: #fff;
-  border-width: 2px;
-  margin: 10px;
+	margin-right: 50vw;
+	border-radius: 12px;
+	color: #fff;
+	border-width: 2px;
+	margin: 10px;
 }
 
 #cal:hover {
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
+	-webkit-transform: scale(1.2);
+	transform: scale(1.2);
 }
 
 #negative {
-  color: rgb(99, 4, 17);
+	color: rgb(99, 4, 17);
 }
 
 #postive {
-  color: #29979b;
+	color: #29979b;
 }
 
 #neutral {
-  color:var(--dim-gray);
+	color: var(--dim-gray);
 }
 
 #btn-landing {
-  background-color:var(--medium-purple);
-  border: var(--medium-purple);
-  color: white;
-  margin-left: 0px;
+	background-color: var(--medium-purple);
+	border: var(--medium-purple);
+	color: white;
+	margin-left: 0px;
 }
 
 #btn-edit {
-  background-color:var(--medium-purple);
-  border: var(--medium-purple);
-  color: white;
-  margin-left: 0px;
+	background-color: var(--medium-purple);
+	border: var(--medium-purple);
+	color: white;
+	margin-left: 0px;
 }
 
-
-#details{
-  background-color: #fff;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
+#details {
+	background-color: #fff;
+	padding-top: 1rem;
+	padding-bottom: 2rem;
 }
 
 #tint {
-  padding: 0px;
-  margin: 0px;
-  margin-left: -60px;
-  z-index: 1;
-  height: 750px;
-  width: 110vw;
-  background: rgba(8, 1, 46, 0.432); 
-  background-repeat: repeat;
-  position: absolute;
+	padding: 0px;
+	margin: 0px;
+	margin-left: -60px;
+	z-index: 1;
+	height: 750px;
+	width: 110vw;
+	background: rgba(8, 1, 46, 0.432);
+	background-repeat: repeat;
+	position: absolute;
 }
 
 #landing-page-text {
- margin: 40px;
- margin-top: 180px;
- padding: 5px;
- margin-left: 15px;
- border-radius: 5px;
- font-size: 18px;
- font-family: 'Armata', sans-serif;
- z-index: 5;
-} 
+	margin: 40px;
+	margin-top: 180px;
+	padding: 5px;
+	margin-left: 15px;
+	border-radius: 5px;
+	font-size: 18px;
+	font-family: 'Armata', sans-serif;
+	z-index: 5;
+}
 
 #landing-page-question {
-  font-size: 52px;
-  padding: 10px 0px;
-  margin-top: 10px;
-  font-weight: 900;
+	font-size: 52px;
+	padding: 10px 0px;
+	margin-top: 10px;
+	font-weight: 900;
 }
 
 #my-video {
-  z-index: -100;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0.7;
-  height: 800px;
-} 
-
-
+	z-index: -100;
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0.7;
+	height: 800px;
+}
 
 #page-container {
-  min-height: calc(100vh - 160px);
+	min-height: calc(100vh - 160px);
 }
 
 #quote {
-  color: white;
-  text-align: center;
-  padding: 40px 80px 40px 40px;
-  background-color: rgb(11, 0, 19);
-  z-index: 900;
-  width: 110vw;
-  margin-left: -50px;
+	color: white;
+	text-align: center;
+	padding: 40px 80px 40px 40px;
+	background-color: rgb(11, 0, 19);
+	z-index: 900;
+	width: 110vw;
+	margin-left: -50px;
 }
 
 #bottom-section {
-  margin-top: 680px;
-  margin-left: -50px;
-  padding-left: 50px;
-  padding-right: 140px;
-  position: absolute;
-  z-index: 4;
-  width: 110vw;
-  background-image: url('../images/topography.png');
-  border-top:gray 2px solid;
-} 
+	margin-top: 680px;
+	margin-left: -50px;
+	padding-left: 50px;
+	padding-right: 140px;
+	position: absolute;
+	z-index: 4;
+	width: 110vw;
+	background-image: url("../images/topography.png");
+	border-top: gray 2px solid;
+}
+
+#dream-plot-chart{
+	max-height: 300px;
+	max-width: 80vw;
+}
+
