--- a/views/dreams/show.ejs
+++ b/views/dreams/show.ejs
@@ -10,7 +10,7 @@
     </form>
     <% } %>
   </div>
-  <h1 id="center">Analysis of dream</h1>
+  <h1 id="center">Dream details</h1>
   <div class="line"></div>
   <div class="container">
     <time class="icon">
